@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2011,v 1.1397 2011/06/04 15:23:47 schmonz Exp $
+$NetBSD: CHANGES-2011,v 1.1398 2011/06/04 23:13:40 schnoebe Exp $
 
 Changes to the packages collection and infrastructure in 2011:
 
@@ -2182,3 +2182,4 @@ Changes to the packages collection and infrastructure in 2011:
 	Updated lang/python26 to 2.6.7 [obache 2011-06-04]
 	Updated lang/python25 to 2.5.6 [obache 2011-06-04]
 	Updated www/ikiwiki to 3.20110431 [schmonz 2011-06-04]
+	Updated textproc/lua-expat to 1.2.0 [schnoebe 2011-06-04]
